--- a/eleso/src/App.css
+++ b/eleso/src/App.css
@@ -4,16 +4,21 @@
   padding: 0;
 }
 
+
+.teaser {
+  font-family: "Montserrat", sans-serif;
+  font-optical-sizing: auto;
+  font-weight: 400;
+  font-style: normal;
+}
+
 body{
   max-width: 1280px;
   margin: auto;
-  font-family: Helvetica,'Times New Roman', Times, serif;
+  box-sizing: border-box;
 }
 
-h2 {
-  color: #fff;
-  font-size: 32px;
-}
+
 .head-section {
   display: flex;
   justify-content: space-between;
@@ -22,8 +27,13 @@ h2 {
 .main-container {
   background-image: linear-gradient(#0c5679, #a6c1ce);
   max-width: 100%;
-  padding: 30px;
+  z-index: 99;
 }
+
+.teaser {
+  color: #ffffff;
+}
+
 .main-section {
   display: flex;
   justify-content: space-between;
@@ -35,10 +45,38 @@ h2 {
   border-radius: 25px;
 }
 
+.maintenance {
+  background-image: linear-gradient(#0c587c, #159ad8);
+  padding: 40px 20px;
+  text-align: right;
+  color: #ffffff;
+  font-weight: 700;
+}
 
-nav ul li {
+.maintenance a:link {
+  color: #ffffff;
+  text-decoration: none;
+}
+
+/* visited link */
+.maintenance a:visited {
+  color: #ffffff;
+}
+
+/* mouse over link */
+.maintenance a:hover {
+  color: #ffffff;
+}
+
+/* selected link */
+.maintenance a:active {
+  color: #ffffff;
+}
+
+nav ul li, .maintenance ul li {
   display: inline-block;
   padding: 0 10px;
+  text-decoration: none;
 }
 
 .App {
@@ -70,7 +108,7 @@ nav ul li {
 
 @media screen and (max-width: 768px){
 
-  
+
 }
 
 @media (prefers-reduced-motion: no-preference) {
@@ -89,6 +127,84 @@ nav ul li {
   /* font-size: calc(10px + 2vmin); */
   color: white;
 }
+
+.benefits-container {
+  display: flex;
+  justify-content: space-around;
+  padding: 40px;
+  }
+
+  .benefit {
+  text-align: center;
+  width: 45%;
+  }
+
+.benefits-section, .how-it-works-section {
+  color:#000000;
+  margin-bottom: 30px;
+  padding: 20px;
+  background-color: #ffffff;
+  
+ 
+}
+
+.how-it-works-section {
+  background-image: linear-gradient(#159ad8, #0c587c);
+  color: #ffffff;
+  border-radius: 5px;
+  box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+}
+
+.steps-container {
+  margin: auto;
+  max-width: 1100px;
+  display: flex;
+  justify-content: space-around;
+  }
+
+  .step {
+    color: #ffffff;
+    width: 30%;
+    text-align: left;
+  }
+
+  .step img {
+    border-radius: 10px;
+    width: 100%;
+  }
+
+.faq-section {
+  color:#333 !important;
+  padding: 40px;
+}
+
+.faq-container {
+  margin-top: 10px;
+  margin-left: auto;
+  margin-right: auto;
+  max-width: 1125px;
+  }
+
+  .faq-item {
+  border-bottom: 1px solid #eee;
+  border-radius: 0 0 5px 5px ;
+  padding: 10px;
+  box-shadow: 0px 6px 5px 1px #c0c0c0;
+  margin-bottom: 10px;
+  }
+
+  .faq-question {
+  display: flex;
+  justify-content: space-between;
+  align-items: left;
+  cursor: pointer;
+  font-weight: bold;
+  }
+
+  .faq-answer {
+  padding: 10px 0 0 0 !important;
+  text-align: left;
+  }
 
 .App-link {
   color: #61dafb;
