--- a/eleso/src/App.css
+++ b/eleso/src/App.css
@@ -5,11 +5,19 @@
 }
 
 
-.teaser {
+.maintext {
+  padding: 30px;
   font-family: "Montserrat", sans-serif;
   font-optical-sizing: auto;
-  font-weight: 400;
+  font-size: 24px;
+  font-weight: 900;
   font-style: normal;
+}
+.teaser {
+  color: #ffffff;
+  /* height: 740px; */
+  max-width: 950px;
+  margin: auto;
 }
 
 body{
@@ -24,25 +32,51 @@ body{
   justify-content: space-between;
   padding: 15px 90px;
 }
+
+.icn {
+  padding-left: 15px;
+  padding-right: 15px;
+}
 .main-container {
   background-image: linear-gradient(#0c5679, #a6c1ce);
   max-width: 100%;
-  z-index: 99;
 }
 
-.teaser {
-  color: #ffffff;
-}
 
-.main-section {
+
+
+
+div .nav {
+  padding: 50px 50px 70px 50px;
+  max-width: 1000px;
+  margin: auto;
+}
+nav {
   display: flex;
   justify-content: space-between;
-  margin-left: 6vw;
-  margin-right: 6vw;
-  max-width: 88vw;
+  max-width: 100%;
   background-color: #afc7d3;
-  padding: 20px;
+  padding: 5px;
   border-radius: 25px;
+}
+nav ul {
+  margin: auto;
+  margin-left: 5px;
+  text-align: left;
+}
+nav ul li:first-child {
+  padding-right: 50px;
+}
+nav ul li, .maintenance ul li {
+  display: inline-block;
+  padding: 0 20px;
+  text-decoration: none;
+  font-weight: 700;
+}
+
+a {
+  text-decoration: none;
+  font-weight: 700;
 }
 
 .maintenance {
@@ -73,22 +107,14 @@ body{
   color: #ffffff;
 }
 
-nav ul li, .maintenance ul li {
-  display: inline-block;
-  padding: 0 10px;
-  text-decoration: none;
-}
+
 
 .App {
   text-align: center;
   background-color: #ffffff;
 }
 
-.teaser {
-    max-width: 960px;
-    padding: 40px;
-    margin: auto;
-}
+
 
 .cta {
   padding: 10px 15px;
@@ -99,6 +125,15 @@ nav ul li, .maintenance ul li {
 .cta a {
   color: #ffffff;
   text-decoration: none;
+}
+
+.WhatYouGet, .HowItWorks {
+  margin-left: 30px;
+  padding: 15px 30px;
+}
+.HowItWorks {
+  background-color: inherit;
+  border: 1px solid #ffffff;
 }
 
 .App-logo {
